--- a/css/style.css
+++ b/css/style.css
@@ -1,152 +1,33 @@
-* {
-    margin: 0px;
-    padding: 0px;
+*{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+    color: white;
 }
 
 body{
-   font-family: 'Times New Roman', Times, serif;
+    background-color: wheat;
 }
 
-a{
-    text-decoration: none;
+#loggan{
+    width: 100px;
 }
 
-li{
-    list-style: none;
+nav{
+    background-color: rgba(17,102,170,0.80);
 }
 
-.navbar {
-    display: flex;
-    height: 90px;
-    align-items: center;
-    justify-content: space-around;
-    padding: 20px;
-    background-color: black;
-    color: white;
-}
-.nav-links a {
-    color: white;
-}
-
-.logo {
-    font-size: 30px;
-    color: #fff;
-    cursor: pointer;
-}
-
-.menu {
-    display: flex;
-    font-size: 25px;
-    gap: 30px;
-}
-
-.menu li{
-    padding: 5px 15px;
-}
-
-.menu a {
-    padding: 10px 20px;
-}
-
-.menu a:hover{
-    transition: 0.3s all ease;
-    color: #000;
-    background-color: white;
-}
-
-#checkbox_toggle{
-    display: none;
-}
-
-.hamburger{
-    display: flex;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-.hamburger-line{
-    background-color: white;
-    display: block;
-    height: 3px;
-    position: relative;
-    width: 28px;
-}
-
-.hamburger-line::before,
-.hamburger-line::after{
-    background-color: white;
+nav:after{
     content: "";
-    display: block;
-    position: absolute;
-    transition: 0.3s all ease;
-    width: 100%;
-    height: 100%;
+    clear: both;
+    display: table;
 }
 
-.hamburger-line::before{
-    top: 7px;
-}
+nav ul{
+    float: right;
+    list-style: none;
+    margin-right: 40px;
+    position: relative;
 
-
-.hamburger-line::after{
-    top: -7px;
-}
-
-@media (max-width: 768px) {
-    .menu{
-        display: none;
-        max-height: 0;
-        overflow: hidden;
-        position: absolute;
-        border-top: 3px solid white;
-        text-align: center;
-        right: 0px;
-        left: 0px;
-        margin-top: 20px;
-        z-index: 10;
-    }
-
-    .menu li a{
-        color: rgb(255, 255, 255);
-        display: block;
-        padding: 15px;
-    }
-
-    .menu li{
-        transition: 0.5s all ease;
-        background-color: black;
-        color: white;
-        padding: 10px 20px;
-    }
-
-    .menu li:hover {
-        transition: 0.5s all ease;
-        color: white;
-    }
-
-    #checkbox_toggle:checked ~ .menu {
-        display: block;
-        max-height: 100%;
-        transition: all 0.5s;
-    }
-
-    .hamburger{
-        display: block;
-        padding: 20px 0px;
-    }
-
-    #checkbox_toggle:checked ~ .hamburger .hamburger-line {
-        background-color: transparent;
-    }
-
-    #checkbox_toggle:checked ~ .hamburger .hamburger-line::before {
-        transform: rotate(-45deg);
-        top: 0px;
-    }
-
-    #checkbox_toggle:checked ~ .hamburger .hamburger-line::after {
-        transform: rotate(45deg);
-        top: 0px;
-    }
 }
